# RustGameWASM

./: Cargo.toml  wasm.ps1
src/: controlls.rs  main.rs  multiplayer.rs  player.rs  touchbutton.rs  wasm.rs  world.rs
src/player/: animation.rs  mod.rs  player.rs
src/world/: chunk.rs  entity.rs  mod.rs  positions.rs  tile.rs
textures/: spritesheet.json
