[package]
name = "rustgame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"  
strip = true  # Automatically strip symbols from the binary.

[dependencies]
egui = "0.21.0"
egui-macroquad = "0.15.0"
lazy_static = "1.4.0"
macroquad = "0.3.25"
macroquad-virtual-joystick = { git = "https://github.com/kaller01/macroquad-virtual-joystick", branch = "bug_fix_missing_angle" }
noise = "0.8.2"
quad-url = "0.1.1"
sapp-jsutils = "0.1.5"
serde = "1.0.156"
serde_derive = "1.0.156"
serde_json = "1.0.94"
strum = "0.24.1"
strum_macros = "0.24.3"
